Set up FE -> Angular, basic styling

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,2 +1,26 @@
-//= require_self
-//= require_tree .
+.container {
+  width: 500px;
+  margin: 0 auto;
+}
+
+.header {
+  overflow: hidden;
+  padding-bottom: 0.5em;
+  margin-bottom: 0.5em;
+  border-bottom: 1px solid black;
+}
+
+.header__nav {
+  float: left;
+}
+
+.nav {
+  margin: 0;
+  padding: 0;
+}
+
+.nav__item {
+  display: inline-block;
+  margin-right: 1em;
+}
+
