Adds basic authentication functionality in Angular

--- a/app/views/index/index.slim
+++ b/app/views/index/index.slim
@@ -8,5 +8,7 @@ header.header
       li.nav__item
         a ui-sref="me" Me (protected)
 
+  .header__oauth ng-include="'partials/oauth.html'"
+
 div ui-view=""
 
