--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,10 @@
   float: left;
 }
 
+.header__oauth {
+  float: right;
+}
+
 .nav {
   margin: 0;
   padding: 0;
@@ -22,5 +26,18 @@
 .nav__item {
   display: inline-block;
   margin-right: 1em;
+}
+
+.oauth__link--logout {
+  background: none;
+  outline: none;
+  padding: 0;
+  margin: 0;
+  border: none;
+  display: inline;
+
+  &:hover {
+    cursor: pointer;
+  }
 }
 
